@@ -4,6 +4,7 @@ ncmpc 0.22 - not yet released
 * require libmpdclient 2.3, MPD 0.16
 * patched color line-flags
 * configuration option "search-format"
+* remove broken leoslyrics plugin
 
 
 ncmpc 0.21 - (2013-04-11)
